[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yywc"
version = "0.1.0"
description = "Your Year With Chat — a local year-in-review generator from ChatGPT data exports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
yywc = "yywc.cli:main"

